objects/ProductGroupConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>Allegro_AX_Override__c</fullName>
        <label>Allegro AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allegro_Final__c</fullName>
        <label>Allegro Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allegro_PG_Split__c</fullName>
        <label>Allegro Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allegro_TCV__c</fullName>
        <label>Allegro TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analog_Design_Environment_AX_Override__c</fullName>
        <label>Analog Design Environment AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analog_Design_Environment_Final__c</fullName>
        <label>Analog Design Environment Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analog_Design_Environment_PG_Split__c</fullName>
        <label>Analog Design Environment Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analog_Design_Environment_TCV__c</fullName>
        <label>Analog Design Environment TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Characterization_AX_Override__c</fullName>
        <label>Characterization AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Characterization_Final__c</fullName>
        <label>Characterization Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Characterization_PG_Split__c</fullName>
        <description>Characterization Split %</description>
        <label>Characterization Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Characterization_TCV__c</fullName>
        <label>Characterization TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Simulation_AX_Override__c</fullName>
        <label>Circuit Simulation AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Simulation_Final__c</fullName>
        <label>Circuit Simulation Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Simulation_PG_Split__c</fullName>
        <label>Circuit Simulation Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Simulation_TCV__c</fullName>
        <label>Circuit Simulation TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Layout_AX_Override__c</fullName>
        <label>Custom Layout AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Layout_Final__c</fullName>
        <label>Custom Layout Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Layout_PG_Split__c</fullName>
        <label>Custom Layout Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Layout_TCV__c</fullName>
        <label>Custom Layout TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DFM_AX_Override__c</fullName>
        <label>DFM AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DFM_Final__c</fullName>
        <label>DFM Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DFM_PG_Split__c</fullName>
        <label>DFM Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DFM_TCV__c</fullName>
        <label>DFM TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSG_Differentiated_AX_Override__c</fullName>
        <label>DSG - Differentiated AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSG_Differentiated_Final__c</fullName>
        <label>DSG - Differentiated Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSG_Differentiated_PG_Split__c</fullName>
        <label>DSG - Differentiated Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSG_Differentiated_TCV__c</fullName>
        <label>DSG - Differentiated TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_IP_AX_Override__c</fullName>
        <label>Design IP AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_IP_Final__c</fullName>
        <label>Design IP Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_IP_PG_Split__c</fullName>
        <label>Design IP Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_IP_TCV__c</fullName>
        <label>Design IP TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DifferentiatedDigitalVerificationPGSplit__c</fullName>
        <label>Differentiated Digital Verification Spli</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Differentiated_Digital_Verification_AX_O__c</fullName>
        <label>Differentiated Digital Verification AX O</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Differentiated_Digital_Verification_Fina__c</fullName>
        <label>Differentiated Digital Verification Fina</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Differentiated_Digital_Verification_TCV__c</fullName>
        <label>Differentiated Digital Verification TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Simulation_AX_Override__c</fullName>
        <label>Digital Simulation AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Simulation_Final__c</fullName>
        <label>Digital Simulation Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Simulation_PG_Split__c</fullName>
        <label>Digital Simulation Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Simulation_TCV__c</fullName>
        <label>Digital Simulation TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extraction_AX_Override__c</fullName>
        <label>Extraction AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extraction_Final__c</fullName>
        <label>Extraction Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extraction_PG_Split__c</fullName>
        <label>Extraction Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extraction_TCV__c</fullName>
        <label>Extraction TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_AX_Override__c</fullName>
        <label>Formal Verification AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_Final__c</fullName>
        <label>Formal Verification Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_PG_Split__c</fullName>
        <label>Formal Verification Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_TCV__c</fullName>
        <label>Formal Verification TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HAV_AX_Override__c</fullName>
        <label>HAV AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HAV_Final__c</fullName>
        <label>HAV Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HAV_PG_Split__c</fullName>
        <label>HAV Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HAV_TCV__c</fullName>
        <label>HAV TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_System_Verification_AX_Override__c</fullName>
        <label>Hardware System Verification AX Override</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_System_Verification_Final__c</fullName>
        <label>Hardware System Verification Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_System_Verification_PG_Split__c</fullName>
        <label>Hardware System Verification Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_System_Verification_TCV__c</fullName>
        <label>Hardware System Verification TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_Package_AX_Override__c</fullName>
        <label>IC Package AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_Package_Final__c</fullName>
        <label>IC Package Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_Package_PG_Split__c</fullName>
        <label>IC Package Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_Package_TCV__c</fullName>
        <label>IC Package TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jasper_AX_Override__c</fullName>
        <label>Jasper AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jasper_Final__c</fullName>
        <label>Jasper Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jasper_PG_Split__c</fullName>
        <label>Jasper Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jasper_TCV__c</fullName>
        <label>Jasper TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_TCV__c</fullName>
        <formula>Opportunity__r.TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_External_id__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity External id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Transaction_Type__c</fullName>
        <label>Opportunity Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Group Configuration</relationshipLabel>
        <relationshipName>ProductGroupTableLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P_R_AX_Override__c</fullName>
        <label>P&amp;R AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_R_Final__c</fullName>
        <label>P&amp;R Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_R_PG_Split__c</fullName>
        <label>P&amp;R Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_R_TCV__c</fullName>
        <label>P&amp;R TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Verification_AX_Override__c</fullName>
        <label>Physical Verification AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Verification_Final__c</fullName>
        <label>Physical Verification Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Verification_PG_Split__c</fullName>
        <label>Physical Verification Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Verification_TCV__c</fullName>
        <label>Physical Verification TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Analysis_AX_Override__c</fullName>
        <label>Power Analysis AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Analysis_Final__c</fullName>
        <label>Power Analysis Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Analysis_PG_Split__c</fullName>
        <label>Power Analysis Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Analysis_TCV__c</fullName>
        <label>Power Analysis TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schematic_Editor_AX_Override__c</fullName>
        <label>Schematic Editor AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schematic_Editor_Final__c</fullName>
        <label>Schematic Editor Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schematic_Editor_PG_Split__c</fullName>
        <label>Schematic Editor Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schematic_Editor_TCV__c</fullName>
        <label>Schematic Editor TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_AX_Override__c</fullName>
        <label>Services AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Final__c</fullName>
        <label>Services Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_PG_Split__c</fullName>
        <label>Services Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_TCV__c</fullName>
        <label>Services TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sigrity_AX_Override__c</fullName>
        <label>Sigrity AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sigrity_Final__c</fullName>
        <label>Sigrity Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sigrity_PG_Split__c</fullName>
        <label>Sigrity Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sigrity_TCV__c</fullName>
        <label>Sigrity TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synthesis_AX_Override__c</fullName>
        <label>Synthesis AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synthesis_Final__c</fullName>
        <label>Synthesis Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synthesis_PG_Split__c</fullName>
        <label>Synthesis Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synthesis_TCV__c</fullName>
        <label>Synthesis TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Level_Design_AX_Override__c</fullName>
        <label>System Level Design AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Level_Design_Final__c</fullName>
        <label>System Level Design Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Level_Design_PG_Split__c</fullName>
        <label>System Level Design Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Level_Design_TCV__c</fullName>
        <label>System Level Design TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCV_Calculation_Value__c</fullName>
        <label>TCV Calculation Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_AX_Override__c</fullName>
        <label>Test AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Final__c</fullName>
        <label>Test Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_PG_Split__c</fullName>
        <label>Test Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_TCV__c</fullName>
        <label>Test TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_Analysis_AX_Override__c</fullName>
        <label>Timing Analysis AX Override %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_Analysis_Final__c</fullName>
        <label>Timing Analysis Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_Analysis_PG_Split__c</fullName>
        <label>Timing Analysis Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_Analysis_TCV__c</fullName>
        <label>Timing Analysis TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AX_Override__c</fullName>
        <label>Total AX Override</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Final__c</fullName>
        <label>Total Final</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Split__c</fullName>
        <label>Total DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_TCV_Value__c</fullName>
        <label>Total $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_AX_Override__c</fullName>
        <label>VIP AX Override %</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Final__c</fullName>
        <label>VIP Final %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_PG_Split__c</fullName>
        <label>VIP Split %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_TCV__c</fullName>
        <label>VIP TCV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isDMSOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDMSOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFirstLoad__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isFirstLoad</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Group Configuration</label>
    <nameField>
        <label>ProductGroupConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductGroupConfigurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>